testdata/golden/sema/invalid/fn_type_call_arity.sg
// scenario: wrong number of arguments to function-typed variable
fn test(f: fn(int, int) -> int) {
    // Error: expects 2 arguments, got 1
    let x: int = f(1);
}
